# euler-two-electric-boogaloo

./: Justfile  README.md  pyproject.toml  revcol.py
src/euler/: __init__.py  __main__.py  problems.py  reverse_collatz.py
tests/: test_fibonacci.py  test_helpers.py  test_solutions.py
