[project]
name = "euler"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dan Strong", email = "dan@glyx.co.uk" }
]
dependencies = [
    "tabulate>=0.9.0",
    "types-tabulate>=0.9.0.20240106",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"euler" = "euler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.1",
    "pytest>=8.3.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/euler"]
